fixed some gap

--- a/Styles/school.css
+++ b/Styles/school.css
@@ -963,6 +963,7 @@ align-items: center;
   /* multi parts */
   
   .stories-heading{
+    margin-top: 40px;
     margin-bottom: 20px;
   }
 
